@@ -8,17 +8,12 @@
   
   <parent>
     <groupId>org.flowable</groupId>
-    <artifactId>flowable-root</artifactId>
-    <relativePath>../..</relativePath>
+    <artifactId>flowable-spring-boot</artifactId>
+    <relativePath>../flowable-spring-boot/pom.xml</relativePath>
     <version>6.3.0-SNAPSHOT</version>
   </parent>
   
   <properties>
-    	<!-- Maven build properties -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.7</java.version>
-		
-		<!-- Web container version -->
 		<tomcat.version>7.0.53</tomcat.version>
   </properties>
 
@@ -62,35 +57,9 @@
   <build>
     <plugins>
       <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-enforcer-plugin</artifactId>
-		<version>1.3.1</version>
-		<executions>
-			<execution>
-				<id>enforce-versions</id>
-				<goals>
-					<goal>enforce</goal>
-				</goals>
-				<configuration>
-					<rules>
-						<requireMavenVersion>
-							<message>You are running an older version of Maven. JHipster
-								requires at least Maven 3.0</message>
-							<version>[3.0.0,)</version>
-						</requireMavenVersion>
-						<requireJavaVersion>
-							<message>You are running an older version of Java. The Modeler Application requires at least JDK 1.6</message>
-							<version>[1.6.0,)</version>
-						</requireJavaVersion>
-					</rules>
-				</configuration>
-			</execution>
-		</executions>
-	  </plugin>
-      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-			<argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
+			<argLine>-Xmx256m</argLine>
 			<forkCount>1</forkCount>
 			<reuseForks>true</reuseForks>
 			<!-- Force alphabetical order to have a reproducible build -->
